# SRE-Remediation-Agent-LangGraph-Pipeline

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  cli.py  conftest.py  docker-compose.yml  graph.py  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: rules.yaml
config/prompts/: generate.txt
data/: sample_data.json
models/: __init__.py  rules.py  schemas.py
nodes/: __init__.py  aggregate.py  detect.py  generate.py  ingest.py  validate.py
tests/: __init__.py  __main__.py  conftest.py  test_aggregate.py  test_detect.py
utils/: __init__.py  logger.py  report.py
