[project]
name = "langgraph-pipeline-template"
version = "1.0.0"
description = "Production-ready LangGraph pipeline template for generic data processing"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0.0",
    "langgraph>=1.1.3",
    "langchain-openai>=1.1.12",
    "langfuse>=4.5.0",
    "langchain>=1.2.15",
] 

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "flake8>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["models", "nodes", "utils", "tests"]
